index.html: version 2.0 script added.

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -11,7 +11,10 @@
 </head>
 <body style="background: #506c94">
  <div class="login">
-	<h1>BLZ: Recommendations Engine</h1>
+	<h1>BLZ: Recommendations Engine.
+              -version:2.0. 
+              
+  </h1>
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}" method="post">
