--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -33,7 +33,7 @@
  </div>
 
 
- <form action = "http://localhost/uploader" method = "POST" enctype = "multipart/form-data">
+ <form action = "http://http://127.0.0.1/uploader" method = "POST" enctype = "multipart/form-data">
      <input type = "file" name = "file" />
      <input type = "submit"/>
  </form>
