--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -33,13 +33,13 @@
    <h2> Articles exclusion form:
    </h2>
 
-   <form action="http://127.0.0.1/exclusion_form" method = "POST">
+   <form action="https://apiblzapp.ml/exclusion_form" method = "POST">
     <label for="fname">Exclude article:</label><br>
     <input type="text" name="DocId" placeholder="DocId" required="required">
     <input type="submit" value="Submit">
   </form> 
 
-  <form action="http://127.0.0.1/inclusion_form" method = "POST">
+  <form action="https://apiblzapp.ml/inclusion_form" method = "POST">
     <label for="fname">Include article:</label><br>
     <input type="text" name="DocId" placeholder="DocId" required="required">
     <input type="submit" value="Submit">
@@ -47,7 +47,7 @@
  </div>
 
 <div class="upload">
- <form action = "http://127.0.0.1/uploader" method = "POST" enctype = "multipart/form-data">
+ <form action = "https://apiblzapp.ml/uploader" method = "POST" enctype = "multipart/form-data">
      <input type = "file" name = "file" />
      <input type = "submit"/>
  </form>
