--- a/flask/app/static/css/style.css
+++ b/flask/app/static/css/style.css
@@ -13,6 +13,10 @@
 
 html { width: 100%; height:100%; overflow:hidden; background-color: #ffffff9a;}
 
+head {overflow-y:scroll; 
+
+}
+
 body {
 	width: 100%;
 	height:100%;
