--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -58,23 +58,23 @@
    </h2>
 
    <form action="http://localhost/exclusion_form" method = "POST">
-    <label for="fname">Exclude article:</label><br>
+    <br><label for="fname">Exclude article:</label><br>
     <input type="text" name="DocId" placeholder="DocId" required="required">
     <input type="submit" value="Submit">
   </form> 
 
   <form action="http://localhost/inclusion_form" method = "POST">
-    <label for="fname">Include article:</label><br>
+    <br><label for="fname">Include article:</label><br>
     <input type="text" name="DocId" placeholder="DocId" required="required">
     <input type="submit" value="Submit">
   </form> 
- </div>
 
-<div class="upload">
- <form action = "http://localhost/uploader" method = "POST" enctype = "multipart/form-data">
+
+<form action = "http://localhost/upload_file" method = "POST" enctype = "multipart/form-data">
+     <br><label for="fname">Include article:</label><br>
      <input type = "file" name = "file" />
      <input type = "submit"/>
- </form>
+</form>
 </div>
 </body>
 </html>
