--- a/flask/app/templates/homepage.html
+++ b/flask/app/templates/homepage.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1 class="title">
-  Berliner-Zeitung Recommendations engine: V. 2.0. . 
+  Berliner-Zeitung Recommendations engine: V. 2.0. beta
 </h1>
 <h2 class="subtitle">
   Easy authentication ;-)
