--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -28,6 +28,14 @@
         </nav>
     </div>
 
+    <div class="hero-body">
+      <div class="container has-text-centered">
+         {% block content %}
+         {% endblock %}
+      </div>
+    </div>
+  </section>
+
 
 
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
