--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -78,12 +78,26 @@
     <button type="submit" class="btn btn-primary btn-block btn-large">Submit</button>
   </form> 
 
-
 <form action = "{{ url_for('upload_file')}}" method = "POST" enctype = "multipart/form-data">
      <br><label for="fname">Upload model:</label><br>
      <input type = "file" name = "file" />
      <button type="submit" class="btn btn-primary btn-block btn-large">Submit</button>
 </form>
 </div>
+
+<div class="column is-4 is-offset-4">
+  <h3 class="title">Create an API Token: </h3>
+  <div class="box">
+  <div class="notification is-danger">&nbsp;</div>
+  <form action="{{ url_for('create_token')}}" method = "POST">
+  <div class="field">
+  <div class="control"><input class="input is-large" name="username" type="username" autofocus="" placeholder="Your Username" /></div>
+  </div>
+  <div class="field">
+  <div class="control"><input class="input is-large" name="password" type="password" placeholder="Your Password" /></div>
+  </div>
+  <button class="button is-block is-info is-large is-fullwidth">Create</button></form></div>
+</div>
+
 </body>
 </html>
