--- a/flask/app/static/css/style.css
+++ b/flask/app/static/css/style.css
@@ -5,13 +5,13 @@
 .btn:hover { color: #ffffff; text-decoration: none; background-color: #ffffff; background-position: 0 -15px; -webkit-transition: background-position 0.1s linear; -moz-transition: background-position 0.1s linear; -ms-transition: background-position 0.1s linear; -o-transition: background-position 0.1s linear; transition: background-position 0.1s linear; }
 .btn-primary, .btn-primary:hover { text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); color: rgb(255, 255, 255); }
 .btn-primary.active { color: rgba(255, 255, 255, 0.75); }
-.btn-primary { background-color: #ffffff background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4)); background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); background-image: linear-gradient(top, #6eb6de, #4a77d4); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  border: 1px solid #3762bc; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
+.btn-primary { background-color: #ffffff background-image:-moz-linear-gradient(top, #6eb6de, #4a77d4); background-image:-ms-linear-gradient(top, #6eb6de, #4a77d4); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4)); background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); background-image: linear-gradient(top, #6eb6de, #4a77d4); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  border: 1px solid #3762bc; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
 .btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #ffffff; }
-.btn-block { width: 250px; display: inline flex;}
+.btn-block { width:25%; display: inline flex;}
 
 * { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-html { width: 80%; height:80%; overflow:hidden; background-color: #ffffff9a;}
+html { width:25%; height:100%; overflow:hidden; background-color: #ffffff9a;}
 
 head {overflow-y:scroll; 
 
@@ -19,8 +19,8 @@ head {overflow-y:scroll;
 
 body {
 	overflow-y:scroll; 
-	width: 80%;
-	height:80%;
+	width:25%;
+	height:100%;
 	font-family: 'Helvetica';
 	background: #000;
 	color: rgb(255, 255, 255);
@@ -62,14 +62,14 @@ body {
 	top: 40%;
 	left: 50%;
 	margin: -150px 0 0 -150px;
-	width:400px;
-	height:400px;
+	width:100%;
+	height:100%;
 }
 
 .login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
 input {
-	width: 100px;
+	width: 25%;
 	margin-bottom: 10px;
 	background: rgba(0,0,0,0.3);
 	border: none;
