--- a/flask/app/templates/base.html
+++ b/flask/app/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-fullheight">
+    <section class="hero is-primary is-fullheight has-background-black">
 
         <div class="hero-head">
             <nav class="navbar">
