--- a/flask/app/static/css/style_bg.css
+++ b/flask/app/static/css/style_bg.css
@@ -1,7 +1,7 @@
 #background {
     width: 50%; 
     height: 100%; 
-    position: absolute; 
+    position: relative; 
     left: 0px; 
     top: 100px; 
     z-index: 0;
