--- a/flask/app/templates/homepage.html
+++ b/flask/app/templates/homepage.html
@@ -23,7 +23,7 @@
 </script>
 <p>
   <h1 class="title">
-    Berliner-Zeitung Recommendations engine: V. 2.0. beta
+    Berliner-Zeitung's Recommendations engine: V. 2.0. beta
   </h1>
 </p>
 <p>
@@ -37,11 +37,4 @@
   </h3>
 </p>
 
-
-<!-- <p>
-  <div id="background">
-    <img src='https://www.h-hotels.com/_Resources/Persistent/fe1fa16843a6b361e93ab29e7426155447a40d69/berlin-alexanderplatz-03-2134x1600-1356x1017.jpg' class="stretch" alt="" />
-  </div>
-</p>
--->
 {% endblock %}
