--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" /> -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_bg.css') }}">
      
-    <title><h1 style="color:blue">BLZ: Recommendations Engine</h1></title>
+    <title>BLZ's Recommendations Engine v.2.0 Beta </title>
   
   </head>
 
